--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     	<h4 style="color:#8FAD00;">Birthday</h4>
     </div>
     <div class="balloons text-center" id="b5">
-    	<h4 style="color:#20CFB4;">Katyayani</h4>
+    	<h4 style="color:#8377E4;">Katyayani</h4>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
