--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				<p>a very happy birthday</p>
 			</div>
 		</div>
-		<div class="navbar navbar-fixed-bottom">
+		<div class="navbar">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
 					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
