--- a/index.html
+++ b/index.html
@@ -34,19 +34,34 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
-    <div class="balloons text-center" id="b1">
+    <div class="balloons text-center" id="b1" style="    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 65px; font-weight: bold;">
     	<h4 style="color:#F2B300;">A</h4>
     </div>
-    <div class="balloons text-center" id="b2">
+    <div class="balloons text-center" id="b2" style="    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 65px; font-weight: bold;">
     	<h4 style="color:#0719D4;">Very</h4>
     </div>
-	<div class="balloons text-center" id="b3">
+	<div class="balloons text-center" id="b3" style="    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 65px; font-weight: bold;">
     	<h4 style="color:#D14D39;">Happy</h4>
     </div>
-	<div class="balloons text-center" id="b4">
+	<div class="balloons text-center" id="b4" style="    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 65px; font-weight: bold;">
     	<h4 style="color:#8FAD00;">Birthday</h4>
     </div>
-    <div class="balloons text-center" id="b5">
+    <div class="balloons text-center" id="b5" style="    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 65px; font-weight: bold;">
     	<h4 style="color:#8377E4;">Katyayani</h4>
     </div>
 
